--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "expo": "~32.0.6",
     "firebase": "~5.9.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-redux": "~6.0.1",
+    "redux": "~4.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
