--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "redux": "~4.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "~10.0.1",
     "babel-preset-expo": "~5.1.1",
-    "eslint": "^5.15.2",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-native": "^3.6.0"
+    "eslint": "~5.15.2",
+    "eslint-config-airbnb": "~17.1.0",
+    "eslint-plugin-import": "~2.16.0",
+    "eslint-plugin-jsx-a11y": "~6.2.1",
+    "eslint-plugin-react": "~7.12.4",
+    "eslint-plugin-react-native": "~3.6.0"
   },
   "private": true
 }
