--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "lint": "eslint *.js **/*.js"
+    "lint": "eslint *.js **/*.js",
+    "devtools": "react-devtools"
   },
   "dependencies": {
     "axios": "~0.18.0",
@@ -24,7 +25,8 @@
     "eslint-plugin-import": "~2.16.0",
     "eslint-plugin-jsx-a11y": "~6.2.1",
     "eslint-plugin-react": "~7.12.4",
-    "eslint-plugin-react-native": "~3.6.0"
+    "eslint-plugin-react-native": "~3.6.0",
+    "react-devtools": "^3.6.1"
   },
   "private": true
 }
