--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-jsx-a11y": "~6.2.1",
     "eslint-plugin-react": "~7.12.4",
     "eslint-plugin-react-native": "~3.6.0",
-    "react-devtools": "^3.6.1"
+    "react-devtools": "~3.6.1"
   },
   "private": true
 }
