solved really really frustrating problem with store data not being transferred across the app

--- a/.gitignore
+++ b/.gitignore
@@ -265,5 +265,5 @@ DerivedData/
 # IDE config files
 .idea/
 
-# environment vars
-src/environments/environment.js
+# files with sensitive information
+firebase.config.js
