--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "~5.9.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-router-flux": "~4.0.6",
     "react-redux": "~6.0.1",
     "redux": "~4.0.1",
     "redux-thunk": "~2.3.0"
